<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/size_for_40dp"
    android:background="@color/white_palette"
    tools:context=".ui.smartbca.registdevice.listdevice.ListDevice">

    <include
        android:id="@+id/toolbar_common"
        layout="@layout/toolbar_common" />

    <TextView
        android:id="@+id/tv_01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_for_20dp"
        android:layout_marginTop="@dimen/size_for_10dp"
        android:layout_marginEnd="@dimen/size_for_20dp"
        android:text="@string/connected_devices"
        android:textColor="@color/black_palette"
        android:textSize="@dimen/size_for_17sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_common" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_device_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_for_20dp"
        android:layout_marginTop="@dimen/size_for_10dp"
        android:layout_marginEnd="@dimen/size_for_20dp"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/tv_01" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_for_20dp"
        android:layout_marginTop="@dimen/size_for_20dp"
        android:layout_marginEnd="@dimen/size_for_20dp"
        android:text="@string/max_connected_devices"
        android:textAlignment="center"
        android:textColor="@color/black_palette"
        android:textSize="@dimen/size_for_20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/recycler_device_list" />

    <Button
        android:id="@+id/btn_pairing_smartbca"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_for_60dp"
        android:layout_marginStart="@dimen/size_for_20dp"
        android:layout_marginEnd="@dimen/size_for_20dp"
        android:background="@drawable/rectangle_rounded_blue"
        android:paddingTop="@dimen/size_for_10dp"
        android:paddingBottom="@dimen/size_for_10dp"
        android:text="@string/pair_now"
        android:textAllCaps="false"
        android:textColor="@color/white_palette"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>