<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/size_for_20dp"
    android:background="@color/white_palette"
    android:orientation="vertical"
    tools:context=".ui.smartbca.main.MainSmartBCA">

    <include layout="@layout/toolbar_common" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <ImageView
            android:id="@+id/img_main_smartbca"
            android:layout_width="@dimen/size_for_200dp"
            android:layout_height="@dimen/size_for_200dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/tv_status_smart_bca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_for_20dp"
            android:layout_marginTop="@dimen/size_for_20dp"
            android:layout_marginEnd="@dimen/size_for_20dp"
            android:textAlignment="center"
            android:textColor="@color/black_palette"
            android:textSize="@dimen/size_for_20sp"
            android:textStyle="bold"
            tools:text="@string/no_pairing" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_pairing_smartbca"
        style="@style/ButtonBase"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/size_for_20dp"
        android:layout_marginTop="@dimen/size_for_40dp"
        android:layout_marginEnd="@dimen/size_for_20dp"
        android:layout_marginBottom="@dimen/size_for_10dp"
        android:background="@drawable/rectangle_rounded_blue"
        android:paddingTop="@dimen/size_for_10dp"
        android:paddingBottom="@dimen/size_for_10dp"
        android:text="@string/pair_now"
        android:textColor="@color/white_palette"
        app:layout_constraintBottom_toTopOf="@id/btn_remove_smartbca" />

    <Button
        android:id="@+id/btn_remove_smartbca"
        style="@style/ButtonBase"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/size_for_20dp"
        android:layout_marginTop="@dimen/size_for_40dp"
        android:layout_marginEnd="@dimen/size_for_20dp"
        android:background="@drawable/rectangle_rounded_stroke_blue"
        android:paddingTop="@dimen/size_for_10dp"
        android:paddingBottom="@dimen/size_for_10dp"
        android:text="@string/remove_smartwatch"
        android:textColor="@color/colorBlueBCA"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>